--- a/frontend/src/views/Profile/components/css/changePassword.css
+++ b/frontend/src/views/Profile/components/css/changePassword.css
@@ -7,6 +7,7 @@
   }
   .changePw_topPart {
     height: 60px;
+    margin-top: 20px !important;
   }
 
   .changePw_title {
@@ -16,9 +17,10 @@
     margin: 0 !important;
   }
   .changePw_formContainer {
+    margin-top: 20px !important;
   }
   .changePw_inputField {
-    width: 100%;
+    width: 100% !important;
   }
   .changePw_button {
     max-width: 150px;
