--- a/frontend/src/views/Admin/components/statics/css/student.css
+++ b/frontend/src/views/Admin/components/statics/css/student.css
@@ -6,12 +6,14 @@
     height: 60px;
     background: var(--white);
     border-radius: 10px;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     color: var(--black);
     margin-top: 20px;
+    border: 1px solid var(--grey6);
   }
-
+  .adminStudentBox_root:hover {
+    border: 1px solid var(--blue6);
+  }
   .adminStudentBox_innerContainer {
     position: relative;
   }
