--- a/frontend/src/views/Admin/statics/css/adminDashboard.css
+++ b/frontend/src/views/Admin/statics/css/adminDashboard.css
@@ -32,7 +32,7 @@
     height: 250px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_activeClassBoxInside {
   }
@@ -57,7 +57,7 @@
     margin-top: 40px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_classResourceBoxInside {
   }
@@ -82,7 +82,7 @@
     margin: 0px auto !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_discussionBoxInside {
   }
@@ -106,7 +106,7 @@
     height: 250px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_postBoxInside {
   }
@@ -131,7 +131,7 @@
     background: var(--white) !important;
     border-radius: 15px !important;
     margin-top: 25px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_quizBoxInside {
   }
@@ -156,7 +156,7 @@
     background: var(--white) !important;
     border-radius: 15px !important;
     margin-top: 25px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_tbdBoxInside {
   }
@@ -211,7 +211,7 @@
     max-height: 250px;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_activeClassBoxInside {
   }
@@ -236,7 +236,7 @@
     margin-top: 40px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_classResourceBoxInside {
   }
@@ -260,7 +260,7 @@
     margin: 0px auto !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_discussionBoxInside {
   }
@@ -284,7 +284,7 @@
     height: 200px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_postBoxInside {
   }
@@ -309,7 +309,7 @@
     background: var(--white) !important;
     border-radius: 15px !important;
     margin-top: 25px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_quizBoxInside {
   }
@@ -334,7 +334,7 @@
     background: var(--white) !important;
     border-radius: 15px !important;
     margin-top: 25px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .admin_tbdBoxInside {
   }
