--- a/frontend/src/views/Dashboard/statics/css/classSession.css
+++ b/frontend/src/views/Dashboard/statics/css/classSession.css
@@ -32,7 +32,7 @@
     height: 250px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .mainDash_activeClassBoxInside {
   }
@@ -145,7 +145,7 @@
     margin-top: 40px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .mainDash_classResourceBoxInside {
   }
@@ -175,7 +175,7 @@
     margin: 0px auto !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .mainDash_discussionBoxInside {
   }
@@ -235,7 +235,7 @@
     max-height: 250px;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .mainDash_activeClassBoxInside {
   }
@@ -263,7 +263,7 @@
     margin-top: 40px !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .mainDash_classResourceBoxInside {
   }
@@ -292,7 +292,7 @@
     margin: 0px auto !important;
     background: var(--white) !important;
     border-radius: 15px !important;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+    border: 1px solid var(--grey6);
   }
   .mainDash_discussionBoxInside {
   }
