--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,8 +35,9 @@ body {
   border: 1px solid var(--grey6) !important;
   color: var(--grey1) !important;
 }
-.MuiButton-containedPrimary {
-  background-color: var(--red4) !important;
+.MuiButton-outlinedSecondary {
+  border: 1px solid var(--red4) !important;
+  color: var(--red4) !important;
 }
 /* @media only screen and (min-width: 1366px) {
   body {
