--- a/frontend/src/views/TeacherDashboard/statics/css/teacherDashboard.css
+++ b/frontend/src/views/TeacherDashboard/statics/css/teacherDashboard.css
@@ -26,7 +26,6 @@
     transform: scale(1.03);
     transition: transform 250ms ease-in-out;
   }
-
   
   .teacherDash_botBar {
     width: 100% !important;
@@ -162,6 +161,19 @@
     position: relative !important;
     flex-grow: 1 !important;
   }
+   .teacherDash_attendanceButton{
+    float:right;
+    padding:10px;
+    font-size:1.3rem;
+    font-weight:600;
+    border-radius:8px 8px 0px 0px;
+    cursor:pointer;
+  }
+  .teacherDash_attendanceButton:hover{
+    border-bottom: 2px solid var(--red4);
+    transform: scale(1.03);
+    transition: transform 250ms ease-in-out;
+  }
 
   .teacherDash_topBar {
     width: 100% !important;
@@ -214,5 +226,61 @@
     background: var(--white) !important;
     border-radius: 15px !important;
     box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2) !important;
+  }
+  .teacherDash_popUpContainer {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+    background: rgba(15, 15, 15, 0.5);
+    border: 1px solid black;
+  }
+  .teacherDash_popUpBox {
+    width: 600px;
+    height: 800px;
+    position: relative;
+    border-radius: 15px;
+    background: var(--white);
+    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+
+  }
+  .teacherDash_closeButtonContainer {
+    width: 20px;
+    height: 20px;
+  }
+  .teacherDash_popupTitle{
+    font-weight: bold;
+    font-size:1.5rem;
+
+  }
+  .teacherDash_popupTitleContainer{
+    padding:0px !important;
+    margin:0px !important;
+
+  }
+  .teacherDash_closeButton {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    position: relative;
+    left:40px
+  }
+  .teacherDash_popUptopBar{
+  }
+  .teacherDash_userlistContainerOuter{
+    height:inherit;
+    width:inherit;
+  }
+  .teacherDash_userlistContainer{
+    height:700px;
+    overflow:scroll;
+  }
+  .teacherDash_formBox {
+    width: 85% !important;
+    height:700px;
+    margin: 0px auto;
+
   }
 }
