--- a/frontend/src/views/Dashboard/components/statics/css/message.css
+++ b/frontend/src/views/Dashboard/components/statics/css/message.css
@@ -8,8 +8,7 @@
 
   .message_Image {
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    object-fit: cover;
   }
 
   .message_Content {
@@ -17,6 +16,7 @@
     margin-left: 10px !important;
     padding: 10px;
     max-width: 22vw;
+    min-width: 40px;
     overflow: hidden;
     text-align: justify;
     word-wrap: break-word;
