--- a/frontend/src/components/statics/css/customTextField.css
+++ b/frontend/src/components/statics/css/customTextField.css
@@ -1,4 +1,14 @@
 @import "../../../utils/colors.css";
+
+* {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .customField_root {
   padding: 5px;
   position: relative;
