--- a/frontend/src/views/QuizCreator/components/statics/css/questions.css
+++ b/frontend/src/views/QuizCreator/components/statics/css/questions.css
@@ -1,58 +1,107 @@
 @import "../../../../../utils/colors.css";
-.questions_root {
-  flex-grow: 1;
-  width: 1000px !important;
-  height: 350px;
-  background: var(--white);
-  margin: 0px auto;
-  border-radius: 20px;
-  box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  color: var(--black);
-}
-.questions_innerContainer {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  margin-top: 10px !important;
-  position: relative;
-  padding-left: 30px;
-}
-.questions_titleTextContainer {
-  width: 300px;
-  height: 32px;
-  text-align: justify;
-  white-space: nowrap;
-}
-.questions_titleText {
-  margin: 0;
-  height: 30px;
-  font-weight: bold;
-  font-size: 1.22em;
-  line-height: 1.5em;
-  overflow: hidden;
-  word-wrap: normal;
+
+@media only screen and (min-width: 1280px) {
+  .questions_mainContainer {
+    border-radius: 15px;
+    border: 1px solid var(--grey6);
+    padding: 15px;
+    margin: 10px;
+  }
+
+  .questions_questionTitleContainer {
+    height: 70px !important;
+    cursor: pointer;
+    position: relative;
+  }
+  .minimizeContainer {
+  }
+  .minimizeicon {
+    position: relative;
+    top: 3px;
+    border-radius: 50%;
+  }
+  .questions_questionNumberContainer {
+    width: 300px;
+  }
+  .questions_questionNumber {
+    font-size: 1.7rem;
+    font-weight: bold;
+    margin: 0;
+    text-indent: 5px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  .questions_upload {
+  }
+  .questions_upload:hover {
+    color: var(--purple2);
+  }
+  .questions_removeContainer {
+    position: relative;
+  }
+  .questions_remove {
+    background: transparent;
+    border: none;
+    color: var(--white);
+    border: none;
+    font-size: 1.1em;
+    cursor: pointer;
+  }
+  .questions_remove:hover {
+    transform: scale(1.1);
+    transition: transform 350ms;
+  }
+  .questions_questionMarksContainer {
+  }
+  .questions_marks {
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin: 0;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  .questions_marksField {
+    width: 60px !important;
+    margin: 0px !important;
+  }
+
+  .questions_questionTitle {
+    width: 100% !important;
+  }
+
+  .questions_addQuestionButtonContainer {
+    padding: 10px 0px;
+  }
+  .questions_addQuestionButtonContainer:hover {
+    transform: scale(1.05);
+    transition: 350ms ease;
+  }
+  .questions_addQuestionButton {
+    width: 160px;
+    height: 45px;
+    background-color: var(--red4);
+    color: var(--white);
+    border-radius: 12px;
+    font-size: 1.1em;
+    cursor: pointer;
+    scroll-snap-type: y mandatory;
+    border: none;
+  }
 }
 
-.questions_questionTitleContainer {
-  width: 100%;
-  height: 150px;
-  position: relative;
-  margin-top: 5px !important;
-  text-align: justify;
-}
-
-.questions_questionTitle {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  word-wrap: normal;
-  text-overflow: ellipsis;
-  line-height: 1.8em;
-}
-.questions_Menu {
-}
-.questions_MenuContainer {
-  height: 100%;
+@media only screen and (min-width: 1920px) {
+  .questions_questionNumberContainer {
+    width: 500px;
+  }
+  .questions_marksField {
+    width: 80px !important;
+  }
 }
