--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,7 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.MuiCheckbox-colorPrimary.Mui-checked {
+/* .MuiCheckbox-colorPrimary.Mui-checked {
   color: var(--red4) !important;
 }
 .MuiRadio-colorPrimary.Mui-checked {
@@ -38,7 +38,7 @@ body {
 .MuiButton-outlinedSecondary {
   border: 1px solid var(--red4) !important;
   color: var(--red4) !important;
-}
+} */
 /* @media only screen and (min-width: 1366px) {
   body {
     font-size: var(calc(--base-font-size * 1.3));
