--- a/frontend/src/components/statics/css/customTextField.css
+++ b/frontend/src/components/statics/css/customTextField.css
@@ -10,7 +10,7 @@
 }
 
 .customField_root {
-  padding: 5px;
+  padding: 10px;
   position: relative;
 }
 .error {
@@ -18,4 +18,12 @@
   font-size: 0.8em;
   padding-top: 2px;
   position: absolute;
+}
+.generalInfo_inputField {
+  width: 100%;
+  height: 40px;
+  outline: none;
+  background: transparent;
+  border: 0px;
+  font-size: 1.1em;
 }
