new color added

--- a/frontend/src/utils/colors.css
+++ b/frontend/src/utils/colors.css
@@ -13,6 +13,7 @@
   --red41: #ff6f61;
   --red5: #ff9b91;
   --red6: #ffaaaa;
+  --red8: #f8dfdfb0;
   --red7: #ee4a4ae3;
   --black: #2c2e32;
   --white: #ffffff;
