--- a/frontend/src/views/TeacherDashboard/components/statics/css/students.css
+++ b/frontend/src/views/TeacherDashboard/components/statics/css/students.css
@@ -14,7 +14,6 @@
     float: left;
     box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.75);
   }
-
   .student_ImageRoot {
     padding:0px 10px;
     position: relative;
@@ -28,7 +27,6 @@
     white-space: nowrap;
     text-overflow: ellipsis;
   }
-
   .student_name {
     padding: 0px 10px;
     font-size: 0.8em;
@@ -42,9 +40,11 @@
     border-radius: 15px;
   }
   .student_check {
+    position: absolute;
+    right:0px;
+    top:5px;
  
   }
-
   .student_randomCheckBox {
   }
 }
