--- a/frontend/src/views/Quiz/components/statics/css/quizView.css
+++ b/frontend/src/views/Quiz/components/statics/css/quizView.css
@@ -7,8 +7,8 @@
     margin: 0px auto !important;
   }
   .quizView_topBar {
-    height: 120px;
-    box-shadow: 0px 3px 13px -4px rgba(0, 0, 0, 0.2);
+    height: 100px;
+    border-bottom: 1px solid var(--grey6);
   }
   .quizView_quizTitle {
     margin: 0;
@@ -36,6 +36,13 @@
     color: var(--white);
     border-radius: 15px;
     font-size: 1.15em;
+  }
+  .quizView_quizMarksObtained {
+    position: absolute;
+    right: 20px;
+    color: var(--green3);
+    font-size: 1.1em;
+    font-weight: 600;
   }
 }
 
